app/chainsaw/assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: name: chainsaw-test
(status.port == spec.replicas): true
spec:
  (port == `8080`): true
