app/chainsaw/chainsaw-ingress.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: chainsaw-test
spec:
  steps:
  - try:
    - apply:
        # resource
        file: ../todo-ingress.yaml
    - assert:
        # assertions
        file: assert.yaml
